Add function `getLineWithSensitiveData`.
This function reads a line containing sensitive data from the terminal.

The terminal lines containing the data are cleared once the user has
finished entering their data.

--- a/cardano-wallet.cabal
+++ b/cardano-wallet.cabal
@@ -312,7 +312,8 @@ executable cardano-wallet
       -Werror
       -O2
   build-depends:
-      base
+      ansi-terminal
+    , base
     , cardano-wallet
     , docopt
     , text
